--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-react-helmet": "^5.21.0",
     "gatsby-plugin-sass": "^5.21.0",
     "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-source-filesystem": "^4.21.1",
     "gatsby-transformer-sharp": "^4.21.0",
     "react": "^18.1.0",
